tests/ui/borrowck/issue-52713-bug.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/issue-52713-bug.rs:12:5
   |
LL |     let y = &x;
   |             -- `x` is borrowed here
...
LL |     x += 1;
   |     ^^^^^^ `x` is assigned to here but it was already borrowed
LL |     println!("{}", y);
   |                    - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
